fix: change boilerplate name

--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   },
   "boilerplate": [
     {
-      "name": "ts lib",
+      "name": "ts-lib",
       "package": "@helo-boilerplate/lib-ts",
       "description": "typescript app boilerplate, pack with rollup"
     },
     {
-      "name": "js lib",
+      "name": "js-lib",
       "package": "@helo-boilerplate/lib-js",
       "description": "simple js app"
     },
     {
-      "name": "esm lib",
+      "name": "esm-lib",
       "package": "@helo-boilerplate/lib-esm",
       "description": "simple js app, with esmodule"
     }
